--- a/requirements.txt
+++ b/requirements.txt
@@ -7,16 +7,22 @@ bleach==6.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==5.1.1
 defusedxml==0.7.1
-Django==5.0.5
+Django==5.0.6
 django-cors-headers==4.3.1
+django-filter==2.4.0
 djangorestframework==3.15.1
 docopt==0.6.2
+drf-yasg==1.21.7
 executing==2.0.1
 fastjsonschema==2.19.1
 idna==3.7
+inflection==0.5.1
 ipython==8.12.3
+itypes==1.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.22.0
@@ -44,10 +50,12 @@ pyodbc==5.1.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pywin32==306
+PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
 requests==2.31.0
 rpds-py==0.18.1
+setuptools==69.5.1
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.5.0
@@ -56,6 +64,7 @@ tinycss2==1.3.0
 tornado==6.4
 traitlets==5.14.3
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
 wcwidth==0.2.13
 webencodings==0.5.1
